--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="./css/reset.css">
 <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -43,7 +43,7 @@
                 <p class="desing-desc">Enhancing the interior to achieve a healthier environment for the people using right space.</p>
                 <div class="design-box">
                     <a href="#" class="design-link">View More</a>
-                    <img src="./images/arrow.png" alt="arrow" class="design-img" />
+                    <img src="./images/arrow.png" alt="arrow" class="design-img">
                   </div>
             </li>
             <li class="desing-item">
@@ -51,7 +51,7 @@
                 <p class="desing-desc">Movable articles that are used to make a room or building suitable for living or working.</p>
                 <div class="design-box">
                     <a href="#" class="design-link">View More</a>
-                    <img src="./images/arrow.png" alt="arrow" class="design-img" />
+                    <img src="./images/arrow.png" alt="arrow" class="design-img">
                   </div>
             </li>
             <li class="desing-item">
@@ -59,7 +59,7 @@
                 <p class="desing-desc">Thin object any finished material applied over a floor structure to provide a walking surface.</p>
                 <div class="design-box">
                     <a href="#" class="design-link">View More</a>
-                    <img src="./images/arrow.png" alt="arrow" class="design-img" />
+                    <img src="./images/arrow.png" alt="arrow" class="design-img">
                   </div>
             </li>
         </ul>
@@ -78,7 +78,7 @@
             status.
           </p>
           <div class="tacle-bax">
-            <img src="./images/tacle-phone.png" alt="phone" class="tacle-images" />
+            <img src="./images/tacle-phone.png" alt="phone" class="tacle-images">
             <div class="bix">
               <a href="tel:012345678" class="tacle-link">012345678</a>
               <p class="tacle-p">Call Us Anytime</p>
@@ -127,6 +127,8 @@
         </div>
     </section>
     <section class="logo">
+        <h2 hidden> c</h2>
+        <h6 hidden>cv</h6>
         <div class="container">
         <ul class="logo-list">
             <li class="logo-item"><img src="./images/logo-home.png" alt="logo-home" class="logo-img"></li>
@@ -189,6 +191,8 @@
         </div>
     </section>
     <section class="figure">
+        <h2 hidden>c</h2>
+        <h6 hidden>r</h6>
         <div class="container">
           <ul class="figure-list">
             <li class="figure-item">
