--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:wght@100..900&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 <link rel="stylesheet" href="./css/reset.css">
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./style/main.min.css">
 </head>
 <body>
    <header class="header">
@@ -127,7 +127,7 @@
         </div>
     </section>
     <section class="logo">
-        <h2 hidden> c</h2>
+        <h2 hidden>c</h2>
         <h6 hidden>cv</h6>
         <div class="container">
         <ul class="logo-list">
